--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ permalink: /
         <link rel="stylesheet" href="{{ "css/front.css" | prepend: site.baseurl }}">
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    </head>
+        {% include analytics.html %}
+	</head>
     <body>
         <div class="content">
             {% if site.front_img %}
